--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,13 @@
 body {
   overflow-x: hidden;
   max-width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  margin: 0;
+  padding: 0;
 }
 
 ::selection {
